--- a/DirectX_PKT/EngineBase/EngineBase.vcxproj
+++ b/DirectX_PKT/EngineBase/EngineBase.vcxproj
@@ -167,6 +167,7 @@
     <ClCompile Include="EngineRandom.cpp" />
     <ClCompile Include="EngineSerializer.cpp" />
     <ClCompile Include="EngineString.cpp" />
+    <ClCompile Include="EngineThread.cpp" />
     <ClCompile Include="EngineTime.cpp" />
     <ClCompile Include="NameObject.cpp" />
     <ClCompile Include="PathObject.cpp" />
@@ -188,6 +189,7 @@
     <ClInclude Include="EngineRandom.h" />
     <ClInclude Include="EngineSerializer.h" />
     <ClInclude Include="EngineString.h" />
+    <ClInclude Include="EngineThread.h" />
     <ClInclude Include="EngineTime.h" />
     <ClInclude Include="NameObject.h" />
     <ClInclude Include="PathObject.h" />
