--- a/DirectX_PKT/EngineCore/EngineCore.vcxproj
+++ b/DirectX_PKT/EngineCore/EngineCore.vcxproj
@@ -260,6 +260,7 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="EngineStruct.h" />
+    <ClInclude Include="EngineStructuredBuffer.h" />
     <ClInclude Include="EngineTexture.h">
       <SubType>
       </SubType>
@@ -277,6 +278,7 @@
     <ClInclude Include="imstb_rectpack.h" />
     <ClInclude Include="imstb_textedit.h" />
     <ClInclude Include="imstb_truetype.h" />
+    <ClInclude Include="InstancingRender.h" />
     <ClInclude Include="PreCompile.h">
       <SubType>
       </SubType>
@@ -301,6 +303,7 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="SpriteInstancingRender.h" />
     <ClInclude Include="SpriteRenderer.h">
       <SubType>
       </SubType>
@@ -441,6 +444,7 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="EngineStruct.cpp" />
+    <ClCompile Include="EngineStructuredBuffer.cpp" />
     <ClCompile Include="EngineTexture.cpp">
       <SubType>
       </SubType>
@@ -457,6 +461,7 @@
     <ClCompile Include="imgui_impl_win32.cpp" />
     <ClCompile Include="imgui_tables.cpp" />
     <ClCompile Include="imgui_widgets.cpp" />
+    <ClCompile Include="InstancingRender.cpp" />
     <ClCompile Include="PreCompile.cpp">
       <SubType>
       </SubType>
@@ -485,6 +490,7 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="SpriteInstancingRender.cpp" />
     <ClCompile Include="SpriteRenderer.cpp">
       <SubType>
       </SubType>
