[기능추가] 베터리 게이지 추가 완료 수치에 따라서 게이지 줄어드는거 다름

--- a/DirectX_PKT/MyCore/MyCore.vcxproj.filters
+++ b/DirectX_PKT/MyCore/MyCore.vcxproj.filters
@@ -85,7 +85,7 @@
     <ClCompile Include="CCTVBackGround.cpp">
       <Filter>Level\Stage\Cam</Filter>
     </ClCompile>
-    <ClCompile Include="UIManager.cpp">
+    <ClCompile Include="Lobby.cpp">
       <Filter>UI</Filter>
     </ClCompile>
     <ClCompile Include="FishEyes.cpp">
@@ -150,7 +150,7 @@
     <ClInclude Include="CCTVBackGround.h">
       <Filter>Level\Stage\Cam</Filter>
     </ClInclude>
-    <ClInclude Include="UIManager.h">
+    <ClInclude Include="Lobby.h">
       <Filter>UI</Filter>
     </ClInclude>
     <ClInclude Include="FishEyes.h">
